[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1.0.68"                                # error handling
async-std = "1.13.2"
bytes = "1.3.0"                                  # helps manage buffers
home = "0.5.12"
is_executable = "1.0.5"
libc = "0.2.186"
thiserror = "1.0.38"                             # error handling
